fix: adjust section gaps

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ h2 {
     align-items: center;
     text-align: center;
     align-content: center;
+    gap: 1.5em;
 }
 
 /* ---For sections with subsections, need to adjust flex so that when there is wrap, subsections do not break and wrap---- */
